# diplomarbeit

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: roboto_regular_100.fnt  roboto_regular_30.fnt  roboto_regular_70.fnt
c/shared/: MainApp.c  MainApp.h
c/windows/: AppManager.c  AppManager.h  CSrc.c  CSrc.h  OpenGLWinMappings.c  Resources.c  Resources.h  SampleLayoutAttributesFinal.h  TestClass.c  TestClass.h  ViewManager.c  ViewManager.h  main.c  test.c  test.h
doc/: Diplomarbeit.odt  Fragestellungen+Rahmenbedingungen.txt
docs/: Diplomarbeit.odt  Diplomarbeit_v0_0_1.odt  Diplomarbeit_v0_0_2.odt  Fragestellungen+Rahmenbedingungen.txt
docs/Verteidigung/: Poster.pptx  Poster_old.ppt  VerteidigungPraesentation.pptx
docs/old/: alte anforderungen an vergleich.txt
fonts/: Roboto-Regular-100.bmglyph  Roboto-Regular-30.bmglyph  Roboto-Regular-70.bmglyph
parsing-script/: ContextParsing.txt  Modules.txt  NeededObjectsForInteractiveMode.txt  Parsing.txt  Parsing2.txt
parsing-script/libyaml-master/: DartConfiguration.tcl
parsing-script/old/: SampleLayout.yaml  test.yaml  test3.yaml  test4.yaml  test5.yaml
parsing-script/testfiles/: FrameAnimation.yaml  Menubutton.yaml  Playbuttonrotation.yaml  SampleLayout.yaml  SampleLayout2.yaml  SampleLayout3.yaml  SimpleView.yaml  parse.pl  test2.yaml  test6.yaml
parsing-script/testfiles2/: Menubutton.yaml
quellen/01/: .zotero-ft-cache  eaa-dev.css  uiArchs.html
quellen/02/: .zotero-ft-cache  38-f5c9f0  59-054e9d.css  5a83a9bc.js  98ba6b6.css  ac38c613.js  c871f865.css  data-binding-overview.html
quellen/03/: .zotero-ft-cache  EarlyHistoryST.html
quellen/04/: .zotero-ft-cache
quellen/05/: .zotero-ft-cache  PassiveScreen.html  eaa-dev.css
quellen/06/: .zotero-ft-cache  584900264991316.js  css.css  eric-maxwell-mvc-mvp-and-mvvm-on-android.html  video-post-823bc1987a0f23106cb790c1cf77d2e3ede2dde2dc11916a64.js
quellen/07/: .zotero-ft-cache  understanding-the-basics-of-mvvm-design-pattern.html
quellen/08/: .zotero-ft-cache  getting-started.html
quellen/09/: .zotero-ft-cache  photoshopfamily.html
quellen/10/: .zotero-ft-cache  proto.io.html
quellen/11/: .zotero-ft-cache  png.html
quellen/12/: Notiz.txt
quellen/13/: .zotero-ft-cache  top-10-it-entwicklung-trends-in-2018.html
quellen/14/: .zotero-ft-cache  agilemethodology.org.html
quellen/15/: .zotero-ft-cache
quellen/16/: .zotero-ft-cache  main.css  main.js  www.apple.com.html
quellen/17/: .zotero-ft-cache  148927072.js  GetUserFromCookies.js  embedded-systems-programming.html  geo2.js  gtm.js  iotagenda.css  main.css  responsive-ui.js  responsive.js  ttCmpApi.js
quellen/19/: .zotero-ft-cache
quellen/20/: .zotero-ft-cache  Heap-Fragmentierung.html
quellen/21/: .zotero-ft-cache  300lo.json  300lo_002.json  _ate.config_resp  a  a_002  a_003  a_004  definition.js  markup_language.html  share  share_002  share_003  share_004  shares.json  shares_002.json  shares_003.json  shares_004.json  tt.css  tt.js
quellen/22/: .zotero-ft-cache  Auszeichnungssprache-markup-language-ML.html  content-widget.js  itwissen.css  jobs_002.json  newjavascript.js  tn_dogpt_sync.js
quellen/23/: .zotero-ft-cache  www.json.org.html
quellen/24/: .zotero-ft-cache  Consortium.html
quellen/25/: .zotero-ft-cache
quellen/26/: .zotero-ft-cache  16387.html  catalogue.js  custom.css  gtm.js  wood.js
quellen/27/: .zotero-ft-cache  xml.html
quellen/28/: .zotero-ft-cache  .zotero-ft-info
quellen/29/: .zotero-ft-cache  xaml-overview-wpf.html
quellen/30/: .zotero-ft-cache  bootstrap-custom.css  common.js  google-analytics-external.js  gtm.js  home.js  net.html
quellen/31/: .zotero-ft-cache  83a4c963.js  xaml-in-wpf.html
quellen/32/: .zotero-ft-cache  markup-extensions-and-wpf-xaml.html
quellen/33/: .zotero-ft-cache  code-behind-and-xaml-in-wpf.html  f81e8b30.css  override.css
quellen/34/: .zotero-ft-cache  inline-styles-and-templates.html
quellen/35/: .zotero-ft-cache
quellen/36/: .zotero-ft-cache  fxml_tutorial.html
quellen/37/: .zotero-ft-cache
quellen/38/: .zotero-ft-cache  html_xhtml.html
quellen/39/: .zotero-ft-cache  all.html
quellen/40/: .zotero-ft-cache  qmlapplications.html
quellen/41/: .zotero-ft-cache  qtqml-syntax-propertybinding.html
quellen/42/: .zotero-ft-cache  149513.js  149513_002.js  a  a_002  combined-css-5f3e37707049b7ce91ea2a5d595ed396.css  conversations-embed.js  j.php  leadflows.js  licensing.html  track-27e7368d1aeb9cd7dad8cd874b6fb10b.js
quellen/43/: .zotero-ft-cache
quellen/44/: .zotero-ft-cache  4bcc658a89.css  4bcc658a89.js  home.html
quellen/45/: .zotero-ft-cache  js  run-stateless-application-deployment.html
quellen/46/: .zotero-ft-cache  b.css  shThemePredic8.css  xml-json-yaml.html
quellen/47/: .zotero-ft-cache  4b04b02d.css  understanding-the-xamarin-mobile-platform.html
quellen/48/: .zotero-ft-cache  1  a  front.asp  imp  imp_002  imp_003  imp_004  imp_005  imp_006  jpt  jpt_002  jpt_003  jpt_004  jpt_005  jpt_006  kormorant-1.css  kormorant-1.js  pbjs_lib_v0.js  sitecss.css  sitejs  update.js  vendor-lock-in.html
quellen/49/: .zotero-ft-cache  about.html
quellen/50/: .zotero-ft-cache  3e334498.css  540f2b3f.js  introduction-to-wpf.html
quellen/51/: .zotero-ft-cache  Main.html
quellen/52/: .zotero-ft-cache  javafx-overview-2158620.html
quellen/53/: .zotero-ft-cache  giphy.htm  react-native.html  sdk.js
quellen/54/: .zotero-ft-cache  0-eafb75cad5cad45a610c.js  1-981f839095110f9dcadb.js  app-d7dd4e431cf08aadfed7.js  component---src-pages-index-js-cfe762670601be78a9c9.js  reactjs.org.html  webpack-runtime-07fda87a210796f8f727.js
quellen/55/: .zotero-ft-cache  a  main-base.js  main-branding-base.css  main-common-async.js  main-notes.js  react-native-what-it-is-and-how-it-works-e2182d008f5e.html
quellen/56/: .zotero-ft-cache  149513_002.js  a  css.css  flickity.js  j.php  loader-v2.js  loader-v2_002.js  what-is-qt.html  (+16 more)
test-script/: test.pl  test.yaml
visual-studio/: App.xaml  App.xaml.cs  IABitmap.cs  MainWindow.xaml  MainWindow.xaml.cs  OtkWpfControl.cs  YamlGuiWPF.csproj  YamlGuiWPF.sln
(+356 files in other folders)
